堆是分配对象存储的唯一选择吗？ begin